2002-03-07 Daniel Horn <hellcatv@hotmail.com>
	* also had to add gui to src/Makefile.am...strange
	* added gui to configure.in
	* Switched stars to use animations instead of lights so they will not appear 'through' other objects
	* switched any strange OpenGL state vs was setting for the GUI

2002-03-07 Alexander Rawass <alexannika@users.sourceforge.net>
	
	* ai_orderlist now basically working
	* had to add gui to src/Makefile.am

	
2002-03-06 Alexander Rawass <alexannika@users.sourceforge.net>
	
	* homepage/docu
	  added bugs/todo section
	* exporer-missions: fixed? nan-velocity/position bug
	* ordered the missions dir new
	* ai_orderlist (still experimental)
	

2002-03-06 Corey O'Connor <zoldar256@users.sourceforge.net>
        * A few small changes to OS X target
	  - GLUT mission selector now compiles
	  - VegaStrikeOSXApp now includes GLUT mission selector
	    as a front end to the vegastrike executable in 
	    Resources.

2002-03-05 Alexander Rawass <alexannika@users.sourceforge.net>
	
	* homepage/docu
	  - added force feedback section

	
2002-03-04 Daniel Horn <hellcatv@hotmail.com>
	* Added text over viewscreen
	* Added glow to stars....
	* Made glow work at infinite distance instaed of twinking out
	* Added default Jump, Planet and Sun HudImages
	* Added Hud images for about 98% of objects (tons fo work)
	* Added high_quality_sprite mode (for antialiasing them)
	* Fixed Weapons info with sprite
	* Fixed some ships being upside down (noticed when taking screenshot)
	* Added text for weapon info

	* Added docking bays to be drawn when you press SHIFT-C and have clearence
	* Added manifest VDU screen
	* Fixed known problems with upgrades and tradings
	* Added credits into the picture (get saved as starsystem^credits
	* When you respawn you get loaded into a saved unit.
	* Saved units (with upgrades) are loaded if a mission has a saved game
	* Fixed many font issues